Implement checkbox to switch temporary/permanent group tab

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -25,6 +25,7 @@
       "title": { "content": "$1", "example": "title" }
     }},
   "groupTab.label.default": { "message": "Group" },
+  "groupTab.temporary.label": { "message": "Temporary Group" },
 
   "bookmarkFolder.label": { "message": "$TITLE$ and more",
     "placeholders": {
