--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -25,6 +25,7 @@
       "title": { "content": "$1", "example": "タイトル" }
     }},
   "groupTab.label.default": { "message": "グループ" },
+  "groupTab.temporary.label": { "message": "一時的なグループ" },
 
   "bookmarkFolder.label": { "message": "$TITLE$ など",
     "placeholders": {
