--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -108,6 +108,10 @@
   "config.style.sidebar": { "message": "Sidebar" },
   "config.style.none": { "message": "No Decoration (*Please decorate everything by yourself via \"Extra style rules for sidebar contents\")" },
 
+  "config.colorScheme.caption": { "message": "Color scheme" },
+  "config.colorScheme.photon": { "message": "Photon" },
+  "config.colorScheme.systemColor": { "message": "System Color" },
+
   "config.maxTreeLevel.before": { "message": "Indent tabs until" },
   "config.maxTreeLevel.after": { "message": "level(s) (*Negative value means \"infinite\")" },
 
