--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -106,7 +106,7 @@
   "config.style.mixed": { "message": "Mixed" },
   "config.style.metal": { "message": "Metal" },
   "config.style.sidebar": { "message": "Sidebar" },
-  "config.style.systemcolors": { "message": "System Colors" },
+  "config.style.highcontrast": { "message": "High Contrast" },
   "config.style.none": { "message": "No Decoration (*Please decorate everything by yourself via \"Extra style rules for sidebar contents\")" },
 
   "config.colorScheme.caption": { "message": "Color scheme" },
