Expose config to control cache

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -233,6 +233,7 @@
   "config.debug.caption": { "message": "Development" },
 
   "config.debug.label": { "message": "Debug mode" },
+  "config.useCachedTree.label": { "message": "Optimize tree restoration with cahche" },
   "config.acccelaratedTabDuplication.label": { "message": "Accelarate operations around tab duplication (*NOTE: You'll see unstable behavior around tabs.)" },
   "config.maximumAcceptableDelayForTabDuplication.before": { "message": "Abort tab duplication when it takes" },
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "milliseconds or more." },
