Add configuration UI for detailed logging

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -233,6 +233,10 @@
   "config.debug.caption": { "message": "Development" },
 
   "config.debug.label": { "message": "Debug mode" },
+  "config.logOnUpdated.label":        { "message": "Print logs from tabs.onUpdated" },
+  "config.logOnMouseEvent.label":     { "message": "Print logs from mouse events" },
+  "config.logOnScroll.label":         { "message": "Print logs from auto scrolling" },
+  "config.logOnCollapseExpand.label": { "message": "Print logs from collapse/expand" },
   "config.useCachedTree.label": { "message": "Optimize tree restoration with cahche" },
   "config.acccelaratedTabDuplication.label": { "message": "Accelarate operations around tab duplication (*NOTE: You'll see unstable behavior around tabs.)" },
   "config.maximumAcceptableDelayForTabDuplication.before": { "message": "Abort tab duplication when it takes" },
