--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -233,6 +233,10 @@
   "config.debug.caption": { "message": "開発用" },
 
   "config.debug.label": { "message": "デバッグモード" },
+  "config.logOnUpdated.label":        { "message": "tabs.onUpdated関連のログを出力" },
+  "config.logOnMouseEvent.label":     { "message": "マウス操作関連のログを出力" },
+  "config.logOnScroll.label":         { "message": "自動スクロール関連のログを出力" },
+  "config.logOnCollapseExpand.label": { "message": "ツリーの開閉関連のログを出力" },
   "config.useCachedTree.label": { "message": "キャッシュを使ってツリーの初期化を高速化する" },
   "config.acccelaratedTabDuplication.label": { "message": "タブの複製に関わる処理を高速化する（※動作が不安定になります）" },
   "config.maximumAcceptableDelayForTabDuplication.before": { "message": "" },
