Group logging options

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -233,6 +233,7 @@
   "config.debug.caption": { "message": "Development" },
 
   "config.debug.label": { "message": "Debug mode" },
+  "config.log.caption":               { "message": "Detailed logging" },
   "config.logOnUpdated.label":        { "message": "Print logs from tabs.onUpdated" },
   "config.logOnMouseEvent.label":     { "message": "Print logs from mouse events" },
   "config.logOnScroll.label":         { "message": "Print logs from auto scrolling" },
