Add ability to group tabs opened from pinned tab

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -26,6 +26,10 @@
     }},
   "groupTab.label.default": { "message": "Group" },
   "groupTab.temporary.label": { "message": "Temporary Group" },
+  "groupTab.fromPinnedTab.label": { "message": "Tabs from $TITLE$",
+    "placeholders": {
+      "title": { "content": "$1", "example": "title" }
+    }},
 
   "bookmarkFolder.label": { "message": "$TITLE$ and more",
     "placeholders": {
