--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -249,6 +249,10 @@
   "config.acccelaratedTabDuplication.label": { "message": "タブの複製に関わる処理を高速化する（※動作が不安定になります）" },
   "config.maximumAcceptableDelayForTabDuplication.before": { "message": "" },
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "ミリ秒以内にタブの複製を完了できなかった場合は処理を中断する" },
+  "config.sidebarScrollbarPosition.caption": { "message": "スクロールバーの表示位置:" },
+  "config.sidebarScrollbarPosition.auto": { "message": "自動" },
+  "config.sidebarScrollbarPosition.left": { "message": "左側" },
+  "config.sidebarScrollbarPosition.right": { "message": "右側" },
 
   "config.requestPermissions.bookmarks": { "message": "ブックマークの作成を許可する" },
   "config.requestPermissions.allUrls":   { "message": "キーボードショートカットでのタブ切り替え中は、折り畳まれた子孫タブにはフォーカスせず、折り畳まれたツリーも展開しない（※Webページ内でのスクリプトの実行を許可する必要があります）" },
