--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -56,6 +56,11 @@
   "bookmark.notification.notPermitted.title": { "message": "権限のエラー" },
   "bookmark.notification.notPermitted.message": { "message": "ブックマーク作成に必要な権限を取得できませんでした。ツリー型タブの設定画面で権限を設定して下さい。" },
 
+  "dropLinksOnTabBehavior.message": { "message": "どのように開きますか？" },
+  "dropLinksOnTabBehavior.save":    { "message": "今後も同じ動作を行う" },
+  "dropLinksOnTabBehavior.load":    { "message": "このタブに読み込む" },
+  "dropLinksOnTabBehavior.newtab":  { "message": "新しい子タブで開く" },
+
   "message.startup.description.1": { "message": "Firefox 57以降のバージョン向けに、ツリー型タブがWebExtensionsベースで生まれ変わりました。縦型タブバーは切り替え可能なサイドバーパネルの一つになっています。もし表示されていない場合は、" },
   "message.startup.description.key": { "message": "「F1」キー" },
   "message.startup.description.2": { "message": "を押すかツールバー上の「" },
@@ -196,6 +201,11 @@
   "config.closeParentBehavior.promoteAll": { "message": "閉じた親タブの階層に子孫のタブを移動する" },
   "config.promoteFirstChildForClosedRoot.label": { "message": "最上位の親タブを閉じた時だけは、最初の子タブを新しい親にする" },
   "config.closeParentBehavior.detach": { "message": "子孫のタブをツリーから解放する" },
+
+  "config.dropLinksOnTabBehavior.caption": { "message": "タブにリンクやURL文字列をドロップしたとき" },
+  "config.dropLinksOnTabBehavior.ask":     { "message": "どうするか常に訊ねる" },
+  "config.dropLinksOnTabBehavior.load":    { "message": "そのタブに読み込む" },
+  "config.dropLinksOnTabBehavior.newtab":  { "message": "新しい子タブで開く" },
 
 
   "config.advanced.caption": { "message": "詳細設定" },
