--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -73,6 +73,8 @@
   "message.startup.requestPermissions.description": { "message": "⚠以下の機能には追加の権限が必要です。機能を使いたい場合のみ権限を付与して下さい。" },
   "message.startup.requestPermissions.bookmarks": { "message": "コンテキストメニューの「このツリーをブックマーク」（ブックマークの操作の許可が必要）" },
   "message.startup.requestPermissions.allUrls":   { "message": "キーボードショートカットでのタブ切り替え中は、折り畳まれた子孫タブにはフォーカスせず、折り畳まれたツリーも展開しない（キー操作の検出のためにWebページ内でのスクリプトの実行許可が必要）" },
+  "message.startup.requestPermissions.tabHide": { "message": "ピン留めされたタブ以外のアクティブでないタブを上のタブバーから隠す（Firefox 59以降のバージョンで、タブを隠す捜査の許可が必要）" },
+
 
   "message.startup.userChromeCss.notify": { "message": "タブバーとサイドバーのヘッダーを隠したい場合" },
   "message.startup.userChromeCss.description.1": { "message": "WebExtensionsの仕様上、Firefoxのタブバーとサイドバーのヘッダーはツリー型タブから制御できません。これらを隠したい場合は" },
@@ -126,6 +128,7 @@
 
   "config.faviconizePinnedTabs.label": { "message": "ピン留めされたタブはアイコンのみ表示する" },
   "config.showContextualIdentitiesSelector.label": { "message": "「新しいタブ」ボタンにコンテナータブの選択メニューを表示する" },
+  "config.hideInactiveTabs.label": { "message": "ピン留めされたタブ以外のアクティブでないタブを上のタブバーから隠す（※Firefox 59以降のバージョンで、\"about:config\"で\"extensions.webextensions.tabhide.enabled\"を有効化する必要があります）" },
   "config.animation.label": { "message": "アニメーション効果を有効にする" },
 
 
@@ -266,6 +269,7 @@
 
   "config.requestPermissions.bookmarks": { "message": "ブックマークの作成を許可する" },
   "config.requestPermissions.allUrls":   { "message": "キーボードショートカットでのタブ切り替え中は、折り畳まれた子孫タブにはフォーカスせず、折り畳まれたツリーも展開しない（※Webページ内でのスクリプトの実行を許可する必要があります）" },
+  "config.requestPermissions.tabHide":   { "message": "タブの表示・非表示の切り替えを許可する" },
 
   "config.requestPermissions.fallbackToToolbarButton.title": { "message": "ツールバーの「ツリー型タブ」ボタンをクリックして下さい" },
   "config.requestPermissions.fallbackToToolbarButton.message": { "message": "Firefoxのバグのため、権限をこの画面から要求することができません。ツールバー上の「ツリー型タブ」ボタンをクリックして権限を承認して下さい。" },
