--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -128,6 +128,7 @@
   "config.faviconizePinnedTabs.label": { "message": "Show pinned tabs only with their icon" },
   "config.showContextualIdentitiesSelector.label": { "message": "Show container selector on the \"New Tab\" button" },
   "config.hideInactiveTabs.label": { "message": "Hide inactive tabs except pinned tabs from the top tab bar (*You need to activate \"extensions.webextensions.tabhide.enabled\" via \"about:config\" on Firefox 59 and later.)" },
+  "config.preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab.label": { "message": "Make effort to prevent unexpected focus to a pinned tab after closing of the current tab" },
   "config.animation.label": { "message": "Enable animation effects" },
 
 
