--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -127,8 +127,7 @@
 
   "config.faviconizePinnedTabs.label": { "message": "Show pinned tabs only with their icon" },
   "config.showContextualIdentitiesSelector.label": { "message": "Show container selector on the \"New Tab\" button" },
-  "config.hideInactiveTabs.label": { "message": "Hide inactive tabs except pinned tabs from the top tab bar (*You need to activate \"extensions.webextensions.tabhide.enabled\" via \"about:config\" on Firefox 59 and later.)" },
-  "config.preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab.label": { "message": "Make effort to prevent unexpected focus to a pinned tab after closing of the current tab" },
+  "config.hideInactiveTabs.label": { "message": "Hide inactive tabs except pinned tabs at the top tab bar (*You need to activate \"extensions.webextensions.tabhide.enabled\" via \"about:config\" on Firefox 59 and later.)" },
   "config.animation.label": { "message": "Enable animation effects" },
 
 
@@ -266,6 +265,7 @@
   "config.sidebarScrollbarPosition.auto": { "message": "Auto" },
   "config.sidebarScrollbarPosition.left": { "message": "Left side" },
   "config.sidebarScrollbarPosition.right": { "message": "Right side" },
+  "config.preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab.label": { "message": "Make effort to prevent unexpected focus to a pinned tab after closing of the current tab, while inactive tabs are hidden at the top tab bar" },
 
   "config.requestPermissions.bookmarks": { "message": "Allow to create bookmarks" },
   "config.requestPermissions.allUrls":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts. (*You need to allow executing scripts on webpages.)" },
