--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -128,6 +128,7 @@
   "config.faviconizePinnedTabs.label": { "message": "Angeheftete Tabs nur mit Ihrem Symbol anzeigen" },
   "config.showContextualIdentitiesSelector.label": { "message": "Containerauswahl am \"Neuer Tab\"-Button anzeigen" },
   "config.hideInactiveTabs.label": { "message": "Inaktive Tabs außer angeheftete Tabs in der der Tableiste verstecken (*Du musst in Firefox 59 (und neuer) \"extensions.webextensions.tabhide.enabled\" in \"about:config\" aktivieren.)" },
+   "config.preventUnexpectedFocusToLastPinnedTabForClosedCurrentTab.label": { "message": "Versuchen zu verhinden, dass nach dem Schließen des aktiven Tabs unerwartet ein angehefteter Tab aktiv wird" },
   "config.animation.label": { "message": "Animationen aktivieren" },
 
 
