--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -217,6 +217,8 @@
   "config.dropLinksOnTabBehavior.load":    { "message": "Load to the tab" },
   "config.dropLinksOnTabBehavior.newtab":  { "message": "Open new child tab" },
 
+  "config.warnOnCloseTabs.label": { "message": "Warn me when I attempt to close multiple tabs" },
+
 
   "config.advanced.caption": { "message": "Advanced" },
 
